--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -11,7 +11,7 @@
   <header>
     <h1>SAMURAIニュース</h1>
     <nav>
-      <a href="kadai_008.html">ホーム</a>
+      <a href="https://www.sejuku.net/">ホーム</a>
       <a href="https://www.sejuku.net/">社会</a>
       <a href="https://www.sejuku.net/">経済</a>
       <a href="https://www.sejuku.net/">スポーツ</a>
@@ -32,6 +32,7 @@
           <label>氏名</label>
           <input type="text" placeholder="名前を入力してください">
           <br>
+          <label>年代</label>
           <select>
             <option>10代以下</option>
             <option>20代</option>
@@ -39,6 +40,7 @@
             <option>40代以上</option>
           </select>
           <br>
+          <label>性別</label>
           <label>男性</label><input type="radio" name="gender">
           <label>女性</label><input type="radio" name="gender">
           <label>その他</label><input type="radio" name="gender">
